# generate-python-package

./: .flake8  README.md  _config.yml  cookiecutter.json  requirements.txt
.github/workflows/: build_docs.yml  deploy.yml  main.yml  test_package.yml
docs/: _config.yml  _toc.yml  index.md  options.md
hooks/: post_gen_project.py
tests/: test_package_generation.py
{{cookiecutter.module_name}}/: pyproject.toml
{{cookiecutter.module_name}}/.github/workflows/: check_formating.yml
{{cookiecutter.module_name}}/docs/: _config.yml  api.rst  index.md
{{cookiecutter.module_name}}/src/{{cookiecutter.module_name}}/: cli.py
{{cookiecutter.repository_name}}/: CITATION.cff  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  index.md  pyproject.toml
{{cookiecutter.repository_name}}/.github/workflows/: build_docs.yml  docker-image.yml  test_package.yml  test_package_coverage.yml
{{cookiecutter.repository_name}}/docker/: Dockerfile
{{cookiecutter.repository_name}}/docs/: _config.yml  index.md
{{cookiecutter.repository_name}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  cli.py
