[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "{{cookiecutter.module_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
license = {file = "LICENSE"}
readme = "README.md"

{% if cookiecutter.use_argparse|lower == "y" -%}
[project.scripts]
{{cookiecutter.module_name}} = "{{cookiecutter.module_name}}.cli:main"
{%- endif %}

[project.optional-dependencies]
test = [
{%- if cookiecutter.linting|lower == 'y' %}
    "mypy",
    "flake8",
{%- endif %}
{%- if cookiecutter.testing|lower != 'none' %}
    "pytest",
{%- endif %}
{%- if cookiecutter.testing|lower == 'pytest-cov' %}
    "pytest-cov",
{%- endif %}
]

{% if cookiecutter.build_docs|lower == 'y' -%}
docs = [
   "jupyter-book",
   "jupytext",
]
{% endif -%}

{% if cookiecutter.testing|lower != 'none' %} 
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
{%- if cookiecutter.testing|lower == 'pytest-cov' %}
    "--cov={{cookiecutter.module_name}} --cov-report html --cov-report term-missing -v",
{%- endif %}
]
{% endif -%}